# sphinx-extractor

./: .buildinfo  .flake8  .gitignore  .pre-commit-config.yaml  AUTHORS.rst  Makefile  README.md  README.rst  changelog.html  dev-requirements.txt  directives.html  genindex.html  index.html  installation.html  license.html  objects.inv  pyproject.toml  search.html  searchindex.js  test-requirements.txt  tox.ini
.github/workflows/: docs.yml  lint.yml  tests.yml
_sources/: changelog.rst.txt  index.rst.txt
docs/: changelog.rst  conf.py  directives.rst  index.rst  installation.rst  make.bat
sphinx_extractor/: __init__.py
sphinx_extractor/directives/: extract.py
tests/: test_extract.py
tests/doc_test/test_extract/: Makefile  index.rst
tests/doc_test/test_extract_negative_invalid_file_path/: index.rst
tests/doc_test/test_extract_negative_option_end_value_not_found/: conf.py  index.rst
tests/doc_test/test_extract_negative_option_start_value_not_found/: index.rst
tests/doc_test/utils/: myapp.py  mymd.md  mytxt.txt  myuml.puml
